--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
@@ -1,5 +1,26 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Drophash.Avalonia">
-    Hello World from F# and Avalonia!
+  <TabControl>
+    <TabItem Header="Drop">
+      
+    </TabItem>
+    <TabItem Header="About">
+      <StackPanel Margin="10">
+        <!-- Image Height="128" Stretch="None" Width="128" Source="Logo.png" HorizontalAlignment="Center" / -->
+        <TextBlock Name="Program" Margin="10" FontSize="24" FontWeight="ExtraBold" HorizontalAlignment="Center" />
+        <TextBlock Name="Description"  HorizontalAlignment="Center" TextAlignment="Center" />
+        <TextBlock Name="Copyright" Margin="10" FontSize="8" HorizontalAlignment="Center" />
+        <Button Name="Link" Margin="10" HorizontalAlignment="Center" />
+        <Expander Name="Expander" Margin="10" HorizontalAlignment="Center" MinWidth="500" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+          <Expander.Header>
+            <TextBlock Name="License" />
+          </Expander.Header>
+          <ScrollViewer MaxHeight="150" HorizontalAlignment="Center">
+            <TextBlock Name="MIT" MinHeight="100" Width="500" TextWrapping="NoWrap" xml:space="preserve" />
+          </ScrollViewer>
+        </Expander>
+      </StackPanel>
+    </TabItem>
+  </TabControl>
 </Window>
