--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
@@ -1,13 +1,13 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:html="clr-namespace:Avalonia.Controls.Html;assembly=Avalonia.HtmlRenderer"
-        Title="Drophash.Avalonia"
-        DragDrop.AllowDrop="True">
+        Title="Drophash.Avalonia">
   <TabControl>
     <TabItem Name="Drop" Header="Drop">
       <ScrollViewer Name="DZ">
         <Border Background="{DynamicResource ThemeAccentBrush2}" Padding="16"
-                >
+                Name="Target"
+        DragDrop.AllowDrop="True">
           <TextBlock Name="Zone" TextWrapping="NoWrap"  xml:space="preserve">Drop some text or files here</TextBlock>
         </Border>        
       </ScrollViewer>
