--- a/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
+++ b/Avalonia/Avalonia/Drophash.Avalonia/Drophash.Avalonia.MainWindow.xaml
@@ -8,8 +8,8 @@
       <ScrollViewer Name="DZ">
         <Border Background="{DynamicResource ThemeAccentBrush2}" Padding="16"
                 Name="Target"
-        DragDrop.AllowDrop="True">
-          <TextBlock Name="Zone" TextWrapping="NoWrap"  xml:space="preserve">Ďřōƥ šōɱē ŧēˣŧ ōř ƒĩłēš ĥēřē</TextBlock>
+                DragDrop.AllowDrop="True">
+          <TextBlock Name="Zone" TextWrapping="NoWrap" xml:space="preserve">Ďřōƥ šōɱē ŧēˣŧ ōř ƒĩłēš ĥēřē</TextBlock>
         </Border>
       </ScrollViewer>
     </TabItem>
@@ -19,7 +19,9 @@
         <TextBlock Name="Program" Margin="10" FontSize="24" FontWeight="ExtraBold" HorizontalAlignment="Center" />
         <TextBlock Name="Description"  HorizontalAlignment="Center" TextAlignment="Center" />
         <TextBlock Name="Copyright" Margin="10" FontSize="8" HorizontalAlignment="Center" />
-        <html:HtmlLabel Name="Link" MinHeight="20" Focusable="True" HorizontalAlignment="Center" />
+        <Button Name="Linked">
+          <html:HtmlLabel Name="Link" MinHeight="20" Focusable="True" HorizontalAlignment="Center" />
+        </Button>
         <Expander Name="Expander" Margin="10" HorizontalAlignment="Center" MinWidth="500" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
           <Expander.Header>
             <TextBlock Name="License" />
